--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,7 +6,7 @@ set(SOURCES
 	src/lexer.cpp
 	src/main.cpp
 	src/parser_td.cpp
-	src/parser.cpp
+	src/parser_bd.cpp
 )
 
 add_executable(befcompiler ${SOURCES})
